[package]
name = "ut-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.39.1", features = ["full"] }
device_query = "2.1.0"
enigo = "0.2.1"
anyhow = "1.0.86"
rdev = "0.5.3"